--- a/scss/main.scss
+++ b/scss/main.scss
@@ -107,3 +107,14 @@ body {
         }
     }
 }
+
+// Logo Brand
+.logo-brand {
+    padding-left: 12em;
+    img {
+        width: 15px;
+        height: 15px;
+        margin-bottom: -11rem;
+        margin: 1em;
+    }
+}
