--- a/css/main.css
+++ b/css/main.css
@@ -101,4 +101,14 @@ body {
   .custom-section h3 {
     color: #58b5cb;
   }
+}
+
+.logo-brand {
+  padding-left: 12em;
+}
+.logo-brand img {
+  width: 15px;
+  height: 15px;
+  margin-bottom: -11rem;
+  margin: 1em;
 }/*# sourceMappingURL=main.css.map */
